--- a/front/index.html
+++ b/front/index.html
@@ -1,142 +1,122 @@
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div id="titre">
-      <h2>Le Carton</h2>
-    </div>
-    <div class="">
-      <h3>C'est quoi?</h3>
-      <p id="quoi"></p>
-    </div>
-    <div class="">
-      <h3>Ca fait quoi?</h3>
-      <p id="fonction"></p>
-    </div>
-    <div class="">
-      <h3>Ca le fait comment?</h3>
-      <p id="comment"></p>
-      <div id="sous-cartons"></div>
-    </div>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Visionneuse Carton</title>
+</head>
+<body>
 
-    <button id="btn">GO</button>
-  </body>
-  <script>
-    function getCarton(id) {
-      fetch("http://54.37.229.17:8000/cartons/get", {
-        method: "POST",
-        headers: {
-          "content-type": "application/json",
-        },
-        body: JSON.stringify({
-          id: id,
-          sous_carton: true,
-        }),
-      })
-        .then((response) => {
-          response.json().then((carton) => {
-            fillTemplate(carton, 0);
-          });
-        })
-        .catch((err) => {
-          console.log(err);
-        });
-    }
+	<div id="Visionneuse">
+		<div v-if="carton">
+			<div id="titre">
+				<h2>{{carton.nom}}</h2>
+				<p>version: {{currentVersion}}</p>
+				<span>
+					<button v-on:click="modify(carton)">Editer</button>
+				</span>
+				<button v-if="carton.parent" v-on:click="getCarton(carton.parent, 0)">retour</button>
+			</div>
 
-    function fillTemplate(carton, version_Id) {
-      let titre = document.getElementById("titre");
-      clearDiv(titre);
-      let titre_h2 = document.createElement("h2");
-      titre.appendChild(titre_h2);
-      titre_h2.innerText = carton.nom;
-      let modif = document.createElement("span");
-      titre_h2.appendChild(modif);
-      let modif_btn = document.createElement("button");
-      modif.appendChild(modif_btn);
-      modif_btn.innerText = "Modifier";
-      modif_btn.addEventListener("click", () => modifier(carton));
+			<carton-volet titre="C'est quoi?" v-bind:texte="carton.versions[currentVersion].quoi_texte"></carton-volet>
+			<div v-for="cartonQuoi in carton.versions[currentVersion].quoi_cartons">
+				<button v-on:click="getCarton(cartonQuoi._id, 0)">{{cartonQuoi.nom}}</button>
+			</div>
 
-      let version = document.createElement("p");
-      titre.appendChild(version);
-      version.innerText = `version: ${version_Id}`;
+			<carton-volet titre="Ca fait quoi?" v-bind:texte="carton.versions[currentVersion].fonction_texte"></carton-volet>
+			<div v-for="cartonFonction in carton.versions[currentVersion].fonction_cartons">
+				<button v-on:click="getCarton(cartonFonction._id, 0)">{{cartonFonction.nom}}</button>
+			</div>
 
-      if (carton.parent) {
-        let back = document.createElement("button");
-        back.innerText = "retour";
-        back.addEventListener("click", () => getCarton(carton.parent));
-        titre.appendChild(back);
-      }
+			<carton-volet titre="Ca le fait comment?" v-bind:texte="carton.versions[currentVersion].comment_texte"></carton-volet>
+			<div v-for="cartonComment in carton.versions[currentVersion].comment_cartons">
+				<button v-on:click="getCarton(cartonComment._id, 0)">{{cartonComment.nom}}</button>
+			</div>
+		</div>
 
-      let quoi_txt = document.getElementById("quoi");
-      quoi_txt.innerText = carton.versions[version_Id].quoi_texte;
-      let fonction_txt = document.getElementById("fonction");
-      fonction_txt.innerText = carton.versions[version_Id].fonction_texte;
-      let comment_txt = document.getElementById("comment");
-      comment_txt.innerText = carton.versions[version_Id].comment_texte;
+		<button v-if="!carton" v-on:click="getCarton('5ed7f15ae09a470019384f29', 0)">GetCarton Ordinateur</button>
+	</div>
 
-      createSubCarton(
-        carton.versions[version_Id].comment_cartons,
-        "sous-cartons"
-      );
-    }
+	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+	<script>
+	
+	var app = new Vue({
+		el: '#Visionneuse',
+		data: {
+			carton: null,
+			currentVersion: null,
+		},
+		methods: {
+			getCarton: function (id, version) {
+				fetch("http://54.37.229.17:8000/cartons/get", {
+					method: "POST",
+					headers: {
+						"content-type": "application/json",
+					},
+					body: JSON.stringify({
+						id: id,
+						sous_carton: true,
+					}),
+				})
+				.then((response) => {
+					response.json().then((carton) => {
+						app.carton = carton;
+						app.currentVersion = version;
+					});
+				})
+				.catch((err) => {
+					console.log(err);
+				});
+			},
+			modify: function (carton) {
+				let new_title = prompt("modifier le titre", carton.nom);
+				if (new_title !== carton.nom && new_title) {
+					carton.nom = new_title;
+					fetch("http://54.37.229.17:8000/cartons/update", {
+						method: "POST",
+						headers: {
+							"content-type": "application/json",
+						},
+						body: JSON.stringify({
+							id: carton._id,
+							update: carton,
+							sous_carton: true,
+						}),
+					})
+					.then((response) => {
+						response.json().then((carton) => {
+							app.carton.nom = carton.nom;
+						});
+					})
+					.catch((err) => {
+						console.log(err);
+					});
+				}
+			},
+		}
+	})
 
-    function createSubCarton(subCartons, div_id) {
-      const div = document.getElementById(div_id);
-      if (div) {
-        clearDiv(div);
+	Vue.component('carton-volet', {
+		props: {
+			titre: {
+				type: String,
+				required: true,
+			},
+			texte: {
+				type: String,
+			}
+		},
+		data: function () {
+			return {
+				txt: "quoi",
+			}
+		},
+		template: '<div class="volet">\
+						<h3>{{titre}}</h3>\
+						<p>{{texte}}</p>\
+					</div>' //TODO: Inserer un component sous-carton ici	
+	})
 
-        subCartons.forEach((carton) => {
-          let btn = document.createElement("button");
-          btn.innerText = carton.nom;
-          btn.addEventListener("click", () => getCarton(carton._id));
-          div.appendChild(btn);
-        });
-      } else {
-        console.log(
-          `Wrong id when trying to insert sub-cartons, got ${div_id}`
-        );
-      }
-    }
-
-    function clearDiv(div) {
-      while (div.firstChild) {
-        div.removeChild(div.lastChild);
-      }
-    }
-
-    function modifier(carton) {
-      let new_title = prompt("modifier le titre", carton.nom);
-      if (new_title !== carton.nom && new_title) {
-        carton.nom = new_title;
-        fetch("http://54.37.229.17:8000/cartons/update", {
-          method: "POST",
-          headers: {
-            "content-type": "application/json",
-          },
-          body: JSON.stringify({
-            id: carton._id,
-            update: carton,
-            sous_carton: true,
-          }),
-        })
-          .then((response) => {
-            response.json().then((carton) => {
-              fillTemplate(carton, 0);
-            });
-          })
-          .catch((err) => {
-            console.log(err);
-          });
-      }
-    }
-
-    let btn = document.getElementById("btn");
-    btn.addEventListener("click", (e) => {
-      getCarton("5ec38974578c370012c9f41f");
-      //getCarton("5ec2dca4577cd10019ee1bdc");
-    });
-  </script>
+	</script>
+</body>
 </html>
